# rawget

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __main__.py  download.py  extension.py  process.py  selection.py
src/resolvers/: __init__.py  generic.py  html.py  youtube.py
tests/: conftest.py  test_download.py  test_process.py  test_selection.py
tests/resolvers/: test_generic.py  test_html.py  test_youtube.py
